# Upstage_AI_LAB_ML_Project

./: README.md  eda.ipynb  project.ipynb  pyproject.toml
src/: submission.csv
