[tool.poetry]
name = "upstage-ai-lab-ml-project"
version = "0.1.0"
description = ""
authors = ["'streetlamplee' <jinintg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
optuna = "^3.4.0"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
plotly = "^5.18.0"
lightgbm = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
